--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@font-face {
+  font-family: "Open Sans";
+  src: url('../fonts/OpenSans-Regular.ttf');
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url('../fonts/Roboto-Regular.ttf');
+}
 
 * {
   margin: 0;
@@ -42,8 +49,6 @@ input::placeholder { color: #a8a8a8; }
 
 .width { width: 100%; }
 
-.high { height: 100%; }
-
 .cent { justify-content: center; }
 
 .align { align-items: center; }
@@ -68,11 +73,9 @@ input::placeholder { color: #a8a8a8; }
 
 .bot { margin-bottom: 38px; }
 
-.banners { margin-bottom: 50px; }
-
 .right { background: #f7f7f7; }
 
-.mark { height: 225px; }
+.top { padding-top: 60px; }
 
 .social img { margin-right: 25px; }
 
@@ -112,32 +115,6 @@ input::placeholder { color: #a8a8a8; }
 .bag::before {
   content: url(../img/bag.png);
   margin-right: 16px;
-}
-
-.block {
-  height: 385px;
-  position: relative;
-}
-
-.title {
-  font-size: 28px;
-  line-height: 1.214;
-}
-
-.pos {
-  position: absolute;
-  top: 60px;
-  right: 100px;
-}
-
-.sale {
-  font-family: "Times New Roman";
-  line-height: 1.625;
-}
-
-.arrivals {
-  font-size: 50px;
-  line-height: 1.3;
 }
 
 .tag {
@@ -210,3 +187,39 @@ input::placeholder { color: #a8a8a8; }
   position: absolute;
   margin: 10px 0 0 -15px;
 }
+
+.tag::after,
+.tag::before {
+  position: absolute;
+  opacity: 0;
+}
+
+.tag::after {
+  content: '\A';
+  width: 100%;
+  height: 75%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.502);
+  cursor: pointer;
+}
+
+.tag::before {
+  content: 'View item';
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 2.955;
+  width: 100%;
+  z-index: 1;
+  top: 150px;
+  text-align: center;
+}
+
+.tag:hover::after,
+.tag:hover::before,
+.tag:hover h4 {
+  opacity: 1;
+  color: #f14a58;
+}
+
+.tag:hover p { font-weight: bold; }
