--- a/css/item.css
+++ b/css/item.css
@@ -15,7 +15,7 @@
   height: 96%;
   top: 0;
   left: 0;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.502);
   opacity: 0;
   transition: all 0.5s;
 }
