--- a/css/media/media-bag.css
+++ b/css/media/media-bag.css
@@ -15,6 +15,13 @@
     height: 100%;
     width: 145px;
   }
+
+  .tag::after {
+    width: 42%;
+    height: 100%;
+  }
+
+  .tag::before { top: 80px; }
 }
 
 @media (max-width: 767px) {
@@ -23,8 +30,6 @@
   .bot { margin-bottom: 40px; }
 
   .info { padding-bottom: 15px; }
-
-  .tag::before { top: 80px; }
 
   .btn {
     width: 140px;
