--- a/css/media/media-item.css
+++ b/css/media/media-item.css
@@ -5,8 +5,6 @@
 
   .container { flex-grow: 100; }
 
-  .thumb img { height: 100%; }
-
   .classic { order: -1; }
 
   .fine { order: 0; }
@@ -48,6 +46,8 @@
   .item { flex-direction: row; }
 
   .thumb { height: 74px; }
+
+  .thumb img { width: auto; }
 
   form { justify-content: flex-start; }
 
