--- a/css/slider.css
+++ b/css/slider.css
@@ -1,5 +1,6 @@
 .wrapper {
   height: 769px;
+  max-width: 1330px;
   overflow: hidden;
 }
 
@@ -23,6 +24,7 @@
   top: 50%;
   z-index: 10;
   font-size: 0;
+  min-width: 1300px;
 }
 
 .control {
