--- a/css/item.css
+++ b/css/item.css
@@ -1,20 +1,32 @@
-.info { padding-left: 50px; }
+.info {
+  padding-left: 50px;
+}
 
-.take { padding-bottom: 20px; }
+.take {
+  padding-bottom: 20px;
+}
 
-.room { padding-bottom: 150px; }
+.room {
+  padding-bottom: 150px;
+}
 
-.thumb img { max-width: 197px; }
+.thumb img {
+  max-width: 197px;
+  width: 100%;
+}
 
-.thumb:hover::after { opacity: 1; }
+.thumb:hover::after {
+  opacity: 1;
+}
 
 .container {
   position: relative;
   max-width: 590px;
+  width: 100%;
 }
 
 .thumb:after {
-  content: '\A';
+  content: "\A";
   position: absolute;
   width: 100%;
   height: 100%;
@@ -47,7 +59,9 @@
   line-height: 2.833;
 }
 
-input.switch-border { display: none; }
+input.switch-border {
+  display: none;
+}
 
 input.switch-border + label > span {
   padding: 14px 18px;
@@ -55,7 +69,9 @@ input.switch-border + label > span {
   cursor: pointer;
 }
 
-input.switch-border:checked + label > span { border-color: #e5e5e5; }
+input.switch-border:checked + label > span {
+  border-color: #e5e5e5;
+}
 
 form span {
   display: inline-block;
