--- a/css/media/media-start.css
+++ b/css/media/media-start.css
@@ -1,13 +1,7 @@
 @media (max-width: 1024px) {
-  .control { display: none; }
-
-  .tag::after { height: 72%; }
-
-  .tag::before { top: 100px; }
-
-  .tag:nth-child(4) { display: none; }
-
-  .tag:not(:nth-child(3)) { margin-right: 20px; }
+  .control {
+    display: none;
+  }
 
   .wrapper {
     position: relative;
@@ -34,13 +28,7 @@
 }
 
 @media (max-width: 767px) {
-  .new, .tag::after { left: 0; }
-
-  .tag::after { height: 65%; }
-
-  .tag:nth-child(3) { display: none; }
-
-  .tag img { width: 100%; }
-
-  .wrapper { height: 474px; }
+  .wrapper {
+    height: 474px;
+  }
 }
