Move shopping bag component

--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -4,3 +4,20 @@
   max-width: 1330px;
   margin: 0 auto;
 }
+
+.btn {
+  background: #ffffff;
+  border: 1px solid #e5e5e5;
+  padding: 8px 20px 6px;
+}
+
+.btn:hover {
+  border: 1px solid #f14a58;
+  color: #f14a58;
+  cursor: pointer;
+}
+
+.large {
+  padding: 20px 60px 18px;
+  font-size: 28px;
+}
