--- a/src/components/app-home/app-home.css
+++ b/src/components/app-home/app-home.css
@@ -52,8 +52,6 @@
   width: 100%;
 }
 
-.large {
-  padding: 20px 60px 18px;
-  font-size: 28px;
-  margin-top: 38px;
+.cards {
+  margin-bottom: 38px;
 }
